@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 72a0797714605a2f67e6385fa4844471318f64ec ChangeLog
+SHA1 711ed5da605cfb9ee4dd1e84069829273cad5bb5 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 43dd39c18bdda86f4aa57569536ad18fe3508368 META.yml
+SHA1 f9782733aae41b851f270d0dec672617b230f632 META.yml
 SHA1 df15cac91cca52b6a2e582f9c64c5196e04bba71 Makefile.PL
 SHA1 9fe655575461fddba1c0bbea1ff20348ec9233a2 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 01e3cf9d5aa9ceeda0d7f771f1c2ad4767895604 lib/Term/Menus.pm
+SHA1 e65afe3ca7f7e53f370befe2049ec9bb24128737 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk0b4QwACgkQdsVAdUjO9IkgFACgnIIrX0bZ3AGgc+b/AsbWavHH
-TjEAn2W0xWI9HbUoUlQqA4SHwQlFJN7R
-=/07Y
+iEYEARECAAYFAk0es1MACgkQdsVAdUjO9Il6QACgot8t5MPW63MqqHoZiGL9b+ZY
+8qQAoI3qCZ5ZsbRGwEIXnFHSEJxkX10D
+=AHgk
 -----END PGP SIGNATURE-----
