@@ -1,3 +1,13 @@
+2010-12-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.60 released.
+
+        * HAPPY NEW YEAR!
+
+        * Added LOTS of new code to support FullAuto 'Plan'
+          functionality.
+
+
 2010-12-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.59 released.
